indent added to css

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
     <div class="row">
         <div class="col-lg-6 lefttxtser">
             <h2>services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet dicta perspiciatis quidem voluptates
+            <p class="indent">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet dicta perspiciatis quidem
+                voluptates
                 quaerat ab voluptatem nulla vero aperiam suscipit, alias maiores hic qui distinctio saepe tenetur
                 ut!
                 Voluptatibus, sequi Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nam ducimus
